[package]
name = "basisu-sys"
version = "0.1.0"
authors = ["Jonathan Behrens <fintelia@gmail.com>"]
edition = "2018"
repository = "https://github.com/fintelia/basisu"
description = "Bindings to the Basis Universal transcoder library"
license = "Apache-2.0"

include = ["Cargo.toml", "src/lib.rs", "build.rs", "wrapper.hpp", "vendor/transcoder/*"]
links = "basis_universal"

[dependencies]

[build-dependencies]
cc = "1.0"
bindgen = "0.53.1"